# compare-runtimes

./: BENCHMARKS.md  Cargo.toml  EXECUTE.md  PREPARE.md
benches/: execute.rs  fibonacci.rs  prepare.rs  runtime.rs
cases/: BENCHMARKS.md  Baseline.bin-runtime  Baseline.pvm  Baseline.sol  Computation.bin-runtime  Computation.pvm  ERC20.bin-runtime  ERC20.pvm  Fibonacci.sol  FibonacciBinet.bin-runtime  FibonacciBinet.pvm  FibonacciIterative.bin-runtime  FibonacciIterative.pvm  FibonacciIterativeUnchecked.bin-runtime  FibonacciIterativeUnchecked.pvm  FibonacciRecursive.bin-runtime  FibonacciRecursive.pvm
src/: lib.rs
src/cases/: evm.rs  mod.rs  polkavm.rs
src/runtimes/: evm.rs  mod.rs  polkavm.rs
