[package]
name = "compare-runtimes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evm-interpreter = { git = "https://github.com/rust-ethereum/evm.git" }
hex = "0.4"
primitive-types = { version = "0.12", features = ["codec"] }
polkavm = { git = "https://github.com/koute/polkavm.git" } 
parity-scale-codec = "3.6"
revive-integration = { path = "../revive/crates/integration/" }
#revive-integration = { git = "https://github.com/xermicus/revive" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[[bench]]
name = "fibonacci"
harness = false

[profile.benchmark]
inherits = "release"
lto = true
codegen-units = 1
