[package]
name = "compare-runtimes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evm-interpreter = { branch = "separate-compilation", git = "https://github.com/xermicus/evm.git" }
hex = "0.4"
primitive-types = { version = "0.12", features = ["codec"] }
polkavm = { git = "https://github.com/koute/polkavm.git" } 
parity-scale-codec = "3.6"
revive-integration = { git = "https://github.com/xermicus/revive" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
alloy-primitives = "0.6"

[[bench]]
name = "execute"
harness = false

[[bench]]
name = "prepare"
harness = false

[profile.benchmark]
inherits = "release"
lto = true
codegen-units = 1
